# FeedbackAnalyzer_14

./: .cursorrules  CMakeLists.txt  Cursor AI_퀴즈 - 문제.docx  README.md
.cursor/agents/: report-github-manager.md
Prompting/: 001-20260522-spec-branch-report-agent-Prompt.md  002-20260522-cursorrules-tdd-cpp17-Prompt.md  003-20260522-code-smell-analysis-Prompt.md  004-20260522-qa-analysis-merge-Prompt.md  005-20260522-test-plan-Prompt.md  006-20260522-catch2-tests-full-Prompt.md  007-20260522-legacy-p0-p1-fixes-Prompt.md  008-20260522-golden-master-regression-Prompt.md  009-20260522-refactoring-plan-Prompt.md  010-20260522-refactoring-implementation-Prompt.md  011-20260522-new-features-trend-sentiment-db-Prompt.md  012-20260522-docs-report-presentation-Prompt.md  013-20260522-report-process-merge-main-Prompt.md
Prompting_user/: 001-20260522-spec-branch-report-agent-User.md  002-20260522-cursorrules-tdd-cpp17-User.md  003-20260522-code-smell-analysis-User.md  004-20260522-qa-analysis-merge-User.md  005-20260522-test-plan-User.md  006-20260522-catch2-tests-full-User.md  007-20260522-legacy-p0-p1-fixes-User.md  008-20260522-golden-master-regression-User.md  009-20260522-refactoring-plan-User.md  010-20260522-refactoring-implementation-User.md  011-20260522-new-features-trend-sentiment-db-User.md  012-20260522-docs-report-presentation-User.md  013-20260522-report-process-merge-main-User.md
Report/: 001-20260522-spec-branch-report-agent.md  002-20260522-cursorrules-tdd-cpp17.md  003-20260522-code-smell-analysis.md  004-20260522-qa-analysis-merge.md  005-20260522-test-plan.md  006-20260522-catch2-tests-full.md  007-20260522-legacy-p0-p1-fixes.md  008-20260522-golden-master-regression.md  009-20260522-refactoring-plan.md  010-20260522-refactoring-implementation.md  011-20260522-new-features-trend-sentiment-db.md  012-20260522-docs-report-presentation.md  013-20260522-report-process-merge-main.md
docs/: code_smell.md  golden_master.md  new_feature.md  presentation.md  qa_analysis.md  refactoring_plan.md  refactoring_result.md  report.md  report_process.md  test_plan.md
scripts/: update_golden.ps1  update_golden.sh
src/cpp/: AppConfig.h  CategoryMatcher.h  CategoryRegistry.h  Constants.cpp  Constants.h  CsvHelpers.h  Feedback.h  FeedbackApp.cpp  FeedbackApp.h  FeedbackRepository.cpp  FeedbackRepository.h  Filters.cpp  Filters.h  HtmlEscape.h  HtmlPageRenderer.cpp  HtmlPageRenderer.h  HttpFormUtils.h  PageViewModel.h  Sentiment.h  SentimentClassifier.h  SentimentKeywordDb.h  SentimentMatcher.h  Session.cpp  Session.h  TextAnalyzer.cpp  TextAnalyzer.h  TrendAnalyzer.h  UIComponents.cpp  UIComponents.h  main.cpp
tests/: CMakeLists.txt
tests/expected/csv/: H03_filtered_download.csv  R02_upload_parsed.txt
tests/expected/domain/: FI_fil_stdout_positive.txt  TA_sent_kw_three_feedbacks.txt
tests/expected/http/: H01_analyze_positive.html  H02_filter_no_data.html  H03_filter_stats.html  H04_upload_stats.html
tests/fixtures/: DomainFixture.h  GoldenMaster.h  GoldenSerialize.h  HttpFixture.h  test_feedback_trend.csv
tests/golden/: test_golden_outputs.cpp
tests/integration/: LegacyCsv.h  LegacyHtml.h  test_csv_behavior.cpp  test_http_exceptions.cpp  test_http_routes.cpp  test_trend_http.cpp
tests/unit/: test_constants.cpp  test_feedback.cpp  test_file_handler.cpp  test_filters.cpp  test_html_escape.cpp  test_logger.cpp  test_p0_regression.cpp  test_performance.cpp  test_sentiment_keyword_db.cpp  test_session.cpp  test_text_analyzer.cpp  test_trend_analyzer.cpp  test_ui_components.cpp
